# shell-mag-64-rust

./: README.md
trip-analyzer/: Cargo.toml
trip-analyzer/src/: main.rs
